# whitenoise

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/whitenoise/: MainActivity.kt
android/app/src/main/kotlin/org/parres/whitenoise/: RustBridge.kt
lib/config/providers/: auth_provider.dart
lib/config/states/: auth_state.freezed.dart  chat_search_state.freezed.dart  chat_state.freezed.dart  create_group_state.freezed.dart  group_state.freezed.dart  localization_state.freezed.dart  nostr_keys_state.freezed.dart  profile_state.freezed.dart  theme_state.freezed.dart  toast_state.freezed.dart  welcome_state.freezed.dart
lib/domain/models/: media_file_download.freezed.dart  media_file_upload.freezed.dart  notification_content.freezed.dart
lib/domain/services/: amber_signer_service.dart
lib/locales/: en.json
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart
lib/src/rust/api/: accounts.dart  error.dart  error.freezed.dart  groups.dart  media_files.dart  relays.dart  users.dart
lib/ui/auth_flow/: login_screen.dart
lib/ui/chat/states/: chat_input_state.freezed.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: accounts.rs  android.rs  mod.rs
