[package]
name = "rust_lib_whitenoise"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.40", features = ["serde"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["chrono"] }
hex = "0.4"
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }
url = "2.5.1"


mdk-core = { version = "0.5.1", git="https://github.com/parres-hq/mdk", rev = "f46875ec6fbe1cd616e9dfb4d2aa10f56044e58c" }
nostr-sdk = { version = "0.43", features = [
    "lmdb",
    "nip04",
    "nip44",
    "nip47",
    "nip59",
] }
# nostr-mls = {version = "0.43.0", path = "../../rust-nostr/mls/nostr-mls"}
# nostr-sdk = {version = "0.43.0", path = "../../rust-nostr/crates/nostr-sdk"}

thiserror = "2.0.12"

whitenoise = { version = "0.1.0", git = "https://github.com/privkeyio/whitenoise-rs", rev = "c774b67065d4a13923937e6a94424d6235707645", features = ["insecure-local-signer"] }

# Android-specific dependencies for Amber signer JNI integration
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[lints.clippy]
not_unsafe_ptr_arg_deref = "allow"
